--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
 }
 
 header {
-    background-image: url('/banner.jpg');
+    background-image: url('banner.jpg');
     background-size: cover;
     height: 150px;
     padding-left: 20px;
