removed border around add buttons

--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ main {
     width: 45px;
     font-size: 20px;
     background-color: #019754;
-    border: 1px solid  whitesmoke;
+    border: none;
     color: whitesmoke;
     padding: 0;
     text-align: center;
